--- a/works.html
+++ b/works.html
@@ -59,7 +59,7 @@
                     <div class="col-md-4">
                         <div data-aos="zoom-in">
                             <div class="project-item shadow-box">
-                                <a class="overlay-link" href="http://wizfree.surge.sh"></a>
+                                <a class="overlay-link" target="_blank"  href="http://wizfree.surge.sh"></a>
                                 <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                 <div class="project-img">
                                     <img src="assets/images/my-works.png" alt="Project">
@@ -80,7 +80,7 @@
 
                             <div data-aos="zoom-in">
                                 <div class="project-item shadow-box">
-                                    <a class="overlay-link" href="https://wizkonga.surge.sh"></a>
+                                    <a class="overlay-link" target="_blank"  href="https://wizkonga.surge.sh"></a>
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="project-img">
                                         <img src="assets/images/konga.png" alt="Project">
@@ -101,7 +101,7 @@
 
                             <div data-aos="zoom-in">
                                 <div class="project-item shadow-box">
-                                    <a class="overlay-link" href="https://urgent-buy-frontend.vercel.app"></a>
+                                    <a class="overlay-link" target="_blank"  href="https://urgent-buy-frontend.vercel.app"></a>
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="project-img">
                                         <img src="assets/images/Screenshot 2024-02-28 at 10.06.49 PM.jpg" alt="Project">
@@ -128,7 +128,7 @@
                         <div class="d-flex align-items-start gap-24">
                             <div data-aos="zoom-in" class="flex-1">
                                 <div class="project-item shadow-box">
-                                    <a class="overlay-link" href="http://wiziphone.surge.sh"></a>
+                                    <a class="overlay-link" target="_blank"  href="http://wiziphone.surge.sh"></a>
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="project-img">
                                         <img src="assets/images/phone.webp" alt="Project">
@@ -147,7 +147,7 @@
                             
                             <div data-aos="zoom-in" class="flex-1">
                                 <div class="project-item shadow-box">
-                                    <a class="overlay-link" href="http://wizcountries.surge.sh"></a>
+                                    <a class="overlay-link" target="_blank"  href="http://wizcountries.surge.sh"></a>
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="project-img">
                                         <img src="assets/images/world-map.jpg" alt="Project">
@@ -168,7 +168,7 @@
                         <div class="d-flex align-items-start gap-24">
                             <div data-aos="zoom-in" class="flex-1">
                                 <div class="project-item shadow-box">
-                                    <a class="overlay-link" href="#"></a>
+                                    <a class="overlay-link" target="_blank"  href="#"></a>
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="project-img">
                                         <img src="assets/images/skintones.jpg" alt="Project">
@@ -187,7 +187,7 @@
 
                             <div data-aos="zoom-in" class="flex-1">
                                 <div class="project-item shadow-box">
-                                    <a class="overlay-link" href="#"></a>
+                                    <a class="overlay-link" target="_blank"  href="#"></a>
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="project-img">
                                         <img src="assets/images/teehub.PNG" alt="Project">
