added header icon

--- a/credentials.html
+++ b/credentials.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> anyacodes </title>
+    <link rel="shortcut icon" href="https://img.icons8.com/cute-clipart/64/000000/a.png" type="image/png">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
