--- a/work-details.html
+++ b/work-details.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="../../css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="https://img.icons8.com/cute-clipart/64/000000/a.png" type="image/png">
 
     <link rel="stylesheet" href="../../gh/iconoir-icons/iconoir%40main/css/iconoir.css">
 
