named project stacks

--- a/works.html
+++ b/works.html
@@ -71,6 +71,7 @@
                                 <div class="d-flex align-items-center justify-content-between">
                                     <div class="project-info">
                                         <p>WEB DESIGNING</p>
+                                        <small> HTML & CSS</small>
                                         <h1>Freelancer Clone</h1>
                                     </div>
                                     <a href="http://wizfree.surge.sh" class="project-btn">
@@ -92,6 +93,7 @@
                                 <div class="d-flex align-items-center justify-content-between">
                                     <div class="project-info">
                                         <p> E-commerce Website</p>
+                                        <small> HTML, CSS , Bootstrap & Javascript </small>
                                         <h1>Konga Clone</h1>
                                     </div>
                                     <a href="https://wizkonga.surge.sh" class="project-btn">
@@ -114,6 +116,7 @@
                                 <div class="d-flex align-items-center justify-content-between">
                                     <div class="project-info">
                                         <p> Fullstack E-commerce Website</p>
+                                        <small> React,Node,SASS & Bootstrap </small>
                                         <h1> Urgent Buy </h1>
                                     </div>
                                     <a href="https://wizkonga.surge.sh" class="project-btn">
@@ -142,6 +145,9 @@
                                     <div class="d-flex align-items-center justify-content-between">
                                         <div class="project-info">
                                             <p>MOBILE Phone Design & Functionality</p>
+                                            <p><small> <small> Phone Passcode - 8950 </small> </small> </p>
+                                            <small> HTML Javascript & Bootstrap </small>
+                                           
                                             <h1> Apple </h1>
                                         </div>
                                         <a href="http://wiziphone.surge.sh" class="project-btn">
@@ -161,6 +167,7 @@
                                     <div class="d-flex align-items-center justify-content-between">
                                         <div class="project-info">
                                             <p> Fetching API </p>
+                                            <small>HTML,CSS & Javascript </small>
                                             <h1> World Countries </h1>
                                         </div>
                                         <a href="http://wizcountries.surge.sh" class="project-btn">
