added some styling

--- a/credentials.html
+++ b/credentials.html
@@ -29,7 +29,7 @@
             <div class="container">
                 <div class="gx-row d-flex align-items-center justify-content-between">
                     <a href="index.html" class="logo">
-                        <img width="100px" height="100px" src="assets/images/logo.png" alt="Logo">
+                        ANYACODES
                     </a>
 
                     <nav class="navbar">
@@ -159,12 +159,12 @@
                                     <!-- <p>Non enim praesent</p> -->
                                 </div>
                                 <div class="skill-item" data-aos="zoom-in">
-                                    <span class="percent">81%</span>
+                                    <span class="percent">80%</span>
                                     <h3 class="name">CSS</h3>
                                     <!-- <p>Non enim praesent</p> -->
                                 </div>
                                 <div class="skill-item" data-aos="zoom-in">
-                                    <span class="percent">27%</span>
+                                    <span class="percent">67%</span>
                                     <h3 class="name">Node</h3>
                                     <!-- <p>Non enim praesent</p> -->
                                 </div>
