--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             <div class="container">
                 <div class="gx-row d-flex align-items-center justify-content-between">
                     <a href="index.html" class="logo">
-                        <img width="100px" height="100px" src="assets/images/logo.png" alt="Logo">
+                        ANYACODES
                     </a>
 
                     <nav class="navbar">
