--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@
                                     <textarea name="Message" id="message" placeholder="Your Message *"></textarea>
                                 </div>
                                 <div class="input-group">
-                                    <button class="theme-btn submit-btn" id="sendmssg" name="submit" type="button">Send
+                                    <button class="theme-btn submit-btn" id="sendmssg"  name="submit" type="button">Send
                                         Message</button>
                                 </div>
                             </form>
@@ -181,8 +181,8 @@
 </html>
 <script>
 
-
-    document.getElementById('sendmssg').addEventListener('click', async function (event) {
+   let mssgButton = document.getElementById('sendmssg')
+    mssgButton.addEventListener('click', async function (event) {
         event.preventDefault(); // Prevent the default form submission
         let NameInput = document.getElementById("full-name")
         let EmailInput = document.getElementById("email")
@@ -198,6 +198,7 @@
             const res = await axios.post('https://new-portfolio-backend.onrender.com/api/user/sendmssg', { Name: input1, Email: input2, Subject: input3, Message: input4 })
             if (res.data.status == 'okay') {
                 alert(res.data.message);
+             mssgButton.disabled = true
                 // Handle success response from server
                 NameInput.value = ''
                 EmailInput.value = ''
