--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@
                                     <textarea name="Message" id="message" placeholder="Your Message *"></textarea>
                                 </div>
                                 <div class="input-group">
-                                    <button class="theme-btn submit-btn" id="sendmssg"  name="submit" type="button">Send
+                                    <button class="theme-btn submit-btn" id="sendmssg" name="submit" type="button">Send
                                         Message</button>
                                 </div>
                             </form>
@@ -181,34 +181,42 @@
 </html>
 <script>
 
-   let mssgButton = document.getElementById('sendmssg')
+    let mssgButton = document.getElementById('sendmssg')
     mssgButton.addEventListener('click', async function (event) {
         event.preventDefault(); // Prevent the default form submission
         let NameInput = document.getElementById("full-name")
         let EmailInput = document.getElementById("email")
         let SubjectInput = document.getElementById("subject")
         let MessageInput = document.getElementById("message")
-
+        let pattern = /^\w+[@]{1}[A-Za-z]+[.]{1}[a-zA-Z]+$/
         let input1 = NameInput.value
         let input2 = EmailInput.value
         let input3 = SubjectInput.value
         let input4 = MessageInput.value
 
-        try {
-            const res = await axios.post('https://new-portfolio-backend.onrender.com/api/user/sendmssg', { Name: input1, Email: input2, Subject: input3, Message: input4 })
-            if (res.data.status == 'okay') {
-                alert(res.data.message);
-             mssgButton.disabled = true
-                // Handle success response from server
-                NameInput.value = ''
-                EmailInput.value = ''
-                SubjectInput.value = ''
-                MessageInput.value = ''
+        if (!pattern.test(input2)) {
+            alert('Invalid email')
+        } else {
+            try {
+                const res = await axios.post('https://new-portfolio-backend.onrender.com/api/user/sendmssg', { Name: input1, Email: input2, Subject: input3, Message: input4 })
+                if (res.data.status == 'okay') {
+                    alert(res.data.message);
+                    mssgButton.disabled = true
+                    // Handle success response from server
+                    NameInput.value = ''
+                    EmailInput.value = ''
+                    SubjectInput.value = ''
+                    MessageInput.value = ''
+                }
+
+            } catch (error) {
+                alert(error.response.data.message)
             }
 
-        } catch (error) {
-            alert(error.response.data.message)
+
+
         }
+
 
 
 
