--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,9 @@
                                 </div>
                                 <div class="right">
                                     <span>Location</span>
-                                    <h4> Ring Road, Ibadan <br> Oyo State <br> Nigeria </h4>
+                                    <h4>
+                                         <!-- Ring Road, Ibadan <br> Oyo State <br>  -->    
+                                       Lagos ,  Nigeria </h4>
                                 </div>
                             </li>
                         </ul>
