--- a/works.html
+++ b/works.html
@@ -176,6 +176,26 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <div data-aos="zoom-in" class="flex-1">
+                                <div class="project-item shadow-box">
+                                    <a class="overlay-link" target="_blank" href="https://chat-app-frontend-jade-eight.vercel.app/"></a>
+                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT067kuKEoywZ2INYVOFx-fwmJlWV_1QJ9Ofw&s" alt="BG" class="bg-img">
+                                    <div class="project-img">
+                                        <img src="" alt="Project">
+                                    </div>
+                                    <div class="d-flex align-items-center justify-content-between">
+                                        <div class="project-info">
+                                            <p> Dreams </p>
+                                            <small> React & node </small>
+                                            <h1> Job application </h1>
+                                        </div>
+                                        <a href="http://wizcountries.surge.sh" class="project-btn">
+                                            <img src="assets/images/icon.svg" alt="Button">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="d-flex align-items-start gap-24">
