--- a/contact.html
+++ b/contact.html
@@ -92,8 +92,9 @@
                                 <div class="right">
                                     <span>Location</span>
                                     <h4>
-                                         <!-- Ring Road, Ibadan <br> Oyo State <br>  -->    
-                                       Lagos ,  Nigeria </h4>
+                                        <!-- Ring Road, Ibadan <br> Oyo State <br>  -->
+                                        Lagos , Nigeria
+                                    </h4>
                                 </div>
                             </li>
                         </ul>
@@ -185,6 +186,7 @@
 
     let mssgButton = document.getElementById('sendmssg')
     mssgButton.addEventListener('click', async function (event) {
+        mssgButton.innerHTML = 'loading...'
         event.preventDefault(); // Prevent the default form submission
         let NameInput = document.getElementById("full-name")
         let EmailInput = document.getElementById("email")
@@ -205,6 +207,7 @@
                     alert(res.data.message);
                     mssgButton.disabled = true
                     // Handle success response from server
+                    mssgButton.innerHTML = 'Send Message'
                     NameInput.value = ''
                     EmailInput.value = ''
                     SubjectInput.value = ''
@@ -212,7 +215,9 @@
                 }
 
             } catch (error) {
-                alert(error.response.data.message)
+                mssgButton.innerHTML = 'Send Message'
+                alert(error?.response?.data?.message)
+
             }
 
 
