--- a/contact.html
+++ b/contact.html
@@ -186,7 +186,7 @@
 
     let mssgButton = document.getElementById('sendmssg')
     mssgButton.addEventListener('click', async function (event) {
-        mssgButton.innerHTML = 'loading...'
+        mssgButton.innerHTML = 'Loading...'
         event.preventDefault(); // Prevent the default form submission
         let NameInput = document.getElementById("full-name")
         let EmailInput = document.getElementById("email")
