--- a/works.html
+++ b/works.html
@@ -129,6 +129,8 @@
 
 
 
+
+
                     </div>
                     <div class="col-md-8">
                         <h1 class="section-heading" data-aos="fade-up"><img src="assets/images/star-2.png" alt="Star">
@@ -147,7 +149,7 @@
                                             <p>MOBILE Phone Design & Functionality</p>
                                             <p><small> <small> Phone Passcode - 8950 </small> </small> </p>
                                             <small> HTML Javascript & Bootstrap </small>
-                                           
+
                                             <h1> Apple </h1>
                                         </div>
                                         <a href="http://wiziphone.surge.sh" class="project-btn">
@@ -179,10 +181,12 @@
 
                             <div data-aos="zoom-in" class="flex-1">
                                 <div class="project-item shadow-box">
-                                    <a class="overlay-link" target="_blank" href="https://chat-app-frontend-jade-eight.vercel.app/"></a>
-                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT067kuKEoywZ2INYVOFx-fwmJlWV_1QJ9Ofw&s" alt="BG" class="bg-img">
+                                    <a class="overlay-link" target="_blank"
+                                        href="https://chat-app-frontend-jade-eight.vercel.app/"></a>
+                                    <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="project-img">
-                                        <img src="" alt="Project">
+                                        <img src="https://assets.indreams.me/docs/images/pagethumbs/dreams.jpg"
+                                            alt="Project">
                                     </div>
                                     <div class="d-flex align-items-center justify-content-between">
                                         <div class="project-info">
@@ -201,15 +205,17 @@
                         <div class="d-flex align-items-start gap-24">
                             <div data-aos="zoom-in" class="flex-1">
                                 <div class="project-item shadow-box">
-                                    <a class="overlay-link" target="_blank" href="#"></a>
+                                    <a class="overlay-link" target="_blank" href=" https://soccerfest-frontend.vercel.app/"></a>
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="project-img">
-                                        <img src="assets/images/skintones.jpg" alt="Project">
+                                        <img src="https://cdn.imgpile.com/f/FUfEReI_xl.JPG" alt="Project">
+                                       
                                     </div>
                                     <div class="d-flex align-items-center justify-content-between">
                                         <div class="project-info">
-                                            <p>BRANDING</p>
-                                            <h1> Skintones </h1>
+                                            <p> Ticket Booking App </p>
+                                        <small> Vue,Node,SASS & Bootstrap </small>
+                                        <h1> 5-Aside Football </h1>
                                         </div>
                                         <a href="#" class="project-btn">
                                             <img src="assets/images/icon.svg" alt="Button">
@@ -220,7 +226,8 @@
 
                             <div data-aos="zoom-in" class="flex-1">
                                 <div class="project-item shadow-box">
-                                    <a class="overlay-link" target="_blank" href="https://drive.google.com/drive/folders/1-1YNb9LgOuOTttbEjls0DpZuVZ9ICjJO"></a>
+                                    <a class="overlay-link" target="_blank"
+                                        href="https://drive.google.com/drive/folders/1-1YNb9LgOuOTttbEjls0DpZuVZ9ICjJO"></a>
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="project-img">
                                         <img src="assets/images/teehub.PNG" alt="Project">
@@ -228,7 +235,7 @@
                                     <div class="d-flex align-items-center justify-content-between">
                                         <div class="project-info">
                                             <p> SOCIAL MEDIA MANAGEMENT</p>
-                                            <small class="text-light"> CLICK TO VIEW PORTFOLIO  </small>
+                                            <small class="text-light"> CLICK TO VIEW PORTFOLIO </small>
                                         </div>
                                         <a href="#" class="project-btn">
                                             <img src="assets/images/icon.svg" alt="Button">
