--- a/works.html
+++ b/works.html
@@ -203,19 +203,43 @@
                         </div>
 
                         <div class="d-flex align-items-start gap-24">
+                         
                             <div data-aos="zoom-in" class="flex-1">
                                 <div class="project-item shadow-box">
-                                    <a class="overlay-link" target="_blank" href=" https://soccerfest-frontend.vercel.app/"></a>
+                                    <a class="overlay-link" target="_blank"
+                                        href=" https://soccerfest-frontend.vercel.app/"></a>
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="project-img">
                                         <img src="https://cdn.imgpile.com/f/FUfEReI_xl.JPG" alt="Project">
-                                       
+
                                     </div>
                                     <div class="d-flex align-items-center justify-content-between">
                                         <div class="project-info">
                                             <p> Ticket Booking App </p>
-                                        <small> Vue,Node,SASS & Bootstrap </small>
-                                        <h1> 5-Aside Football </h1>
+                                            <small> Vue,Node,SASS & Bootstrap </small>
+                                            <h1> 5-Aside Football </h1>
+                                        </div>
+                                        <a href="#" class="project-btn">
+                                            <img src="assets/images/icon.svg" alt="Button">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div data-aos="zoom-in" class="flex-1">
+                                <div class="project-item shadow-box">
+                                    <a class="overlay-link" target="_blank"
+                                        href="https://www.adeajisolasweethomerealltd.com/index.html"></a>
+                                    <img src="assets/images/bg1.png" alt="BG" class="bg-img">
+                                    <div class="project-img">
+                                        <img src="https://cdn.imgpile.com/f/TwA1b8y_xl.jpeg" alt="Project">
+
+                                    </div>
+                                    <div class="d-flex align-items-center justify-content-between">
+                                        <div class="project-info">
+                                            <p> Real Estate Website </p>
+                                            <small> Js,Css & Bootstrap </small>
+                                            <h1> Sweet Homes Real </h1>
                                         </div>
                                         <a href="#" class="project-btn">
                                             <img src="assets/images/icon.svg" alt="Button">
