--- a/works.html
+++ b/works.html
@@ -126,6 +126,28 @@
                             </div>
                         </div>
 
+                        <div data-aos="zoom-in" class="flex-1">
+                            <div class="project-item shadow-box">
+                                <a class="overlay-link" target="_blank"
+                                    href="https://www.neocash.ng/"></a>
+                                <img src="assets/images/bg1.png" alt="BG" class="bg-img">
+                                <div class="project-img">
+                                    <img width="160" height="160" src="https://cdn.prod.website-files.com/64a219dc410d9ffc962311f1/64ac0b17ac8b2ef10e99f9e2_favicon-32x32.png" alt="Project">
+
+                                </div>
+                                <div class="d-flex align-items-center justify-content-between">
+                                    <div class="project-info">
+                                        <p> Fintech/Loan Application </p>
+                                        <small> Flutter & Go </small>
+                                        <h1> Neo Cash </h1>
+                                    </div>
+                                    <a href="#" class="project-btn">
+                                        <img src="assets/images/icon.svg" alt="Button">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
 
 
 
@@ -200,6 +222,8 @@
                                     </div>
                                 </div>
                             </div>
+
+                           
                         </div>
 
                         <div class="d-flex align-items-start gap-24">
@@ -247,6 +271,8 @@
                                     </div>
                                 </div>
                             </div>
+
+                         
 
                             <div data-aos="zoom-in" class="flex-1">
                                 <div class="project-item shadow-box">
